<?xml version="1.0"?>
<package>
  <name>forward_arc_primitives</name>
  <version>0.1.1</version>
  <description>The forward_arc_primitives package</description>

  <maintainer email="xuningy@andrew.cmu.edu">Xuning Yang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cpp_utils</build_depend>
  <build_depend>ros_utils</build_depend>
  <build_depend>trajectory_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cpp_utils</run_depend>
  <run_depend>ros_utils</run_depend>
  <run_depend>trajectory_utils</run_depend>

</package>
